@@ -50,6 +50,7 @@ DISP_E_MEMBERNOTFOUND = -2147352573 #0x80020003
 DISP_E_UNKNOWNINTERFACE = -2147352575 #0x80020001
 
 RPC_E_CHANGED_MODE = -2147417850 # 0x80010106
+RPC_E_SERVERFAULT = -2147417851
 
 # 'macros' and constants to create your own HRESULT values:
 
